--- a/relogio/db/relogio.lpc.html
+++ b/relogio/db/relogio.lpc.html
@@ -112,6 +112,38 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >div_KEY0|mux</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >div_KEY0|baseTempoRapida</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >div_KEY0|baseTempo</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -129,7 +161,7 @@
 </TR>
 <TR >
 <TD >div_KEY0</TD>
-<TD >3</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -209,22 +241,6 @@
 </TR>
 <TR >
 <TD >TST_Key0</TD>
-<TD >9</TD>
-<TD >7</TD>
-<TD >0</TD>
-<TD >7</TD>
-<TD >8</TD>
-<TD >7</TD>
-<TD >7</TD>
-<TD >7</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >TST_chave_9</TD>
 <TD >9</TD>
 <TD >7</TD>
 <TD >0</TD>
