relogio B+, tentando fazer o alarme

--- a/relogio/db/relogio.lpc.html
+++ b/relogio/db/relogio.lpc.html
@@ -32,6 +32,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >FF_KEY2</TD>
+<TD >4</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >FF_KEY1</TD>
 <TD >4</TD>
 <TD >2</TD>
@@ -65,6 +81,22 @@
 </TR>
 <TR >
 <TD >detector_FPGA_RESET</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >detector_KEY2</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
